Closed
Bug 1489375
Opened 2 years ago
Closed 2 years ago
Calling resume on a running AudioContext results that the 'sound-playing' icon hides
Categories
(Core :: Audio/Video: Playback, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla64
People
(Reporter: miserlou, Assigned: alwu)
Details
Attachments
(2 files)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.13; rv:61.0) Gecko/20100101 Firefox/61.0 Build ID: 20180807170231 Steps to reproduce: Go to BitMidi.com. Play a MIDI file. Now play another MIDI file. Now play _another_ MIDI file. You will see that the "mute" icon on the tab has disappeared, and right-click-Mute-Tab no longer works. There is now no way to stop the sweet, sweet sound of 90s MIDI. Actual results: This has been confirmed by two others: https://news.ycombinator.com/item?id=17931759 Expected results: This shouldn't happen.
Hi Rich, Thanks for reporting this issue. Reproducible with the following specs: Version 64.0a1 Build ID: 20180912100128 Mozilla/5.0 (Macintosh; Intel Mac OS X 10.13; rv: 64.0) Gecko/20100101 Firefox/64.0
Comment 2•2 years ago
|
||
Alastor, didn't you work on this? Could you take a look? P2 for now but feel free to change as appropriate.
Rank: 15
Flags: needinfo?(alwu)
Priority: -- → P2
Assignee | ||
Comment 3•2 years ago
|
||
Sure, I will take a look, thanks.
Assignee: nobody → alwu
Flags: needinfo?(alwu)
Assignee | ||
Updated•2 years ago
|
Summary: Playing Multiple Audio Files via WebAssembly in Sequence Breaks "Mute Tab" → Calling resume on a running AudioContext results that the 'sound-playing' icon hides
Assignee | ||
Comment 4•2 years ago
|
||
When calling resume() on a running AudioContext, there is no need to discard current AudioChannelAgent and then create a new one.
Assignee | ||
Comment 5•2 years ago
|
||
add test.
Assignee | ||
Updated•2 years ago
|
status-firefox63:
--- → affected
Comment 6•2 years ago
|
||
Comment on attachment 9008870 [details] Bug 1489375 - part1 : do not recreate AudioChannelAgent. Paul Adenot (:padenot) has approved the revision.
Attachment #9008870 -
Flags: review+
Comment 7•2 years ago
|
||
Comment on attachment 9008872 [details] Bug 1489375 - part2 : add test. Paul Adenot (:padenot) has approved the revision.
Attachment #9008872 -
Flags: review+
Pushed by alwu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/6020749b4bd1 part1 : do not recreate AudioChannelAgent. r=padenot
Pushed by alwu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/aca62b00f1e4 part2 : add test. r=padenot
Comment 11•2 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/6020749b4bd1 https://hg.mozilla.org/mozilla-central/rev/aca62b00f1e4
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
Assignee | ||
Comment 12•2 years ago
|
||
Comment on attachment 9008870 [details] Bug 1489375 - part1 : do not recreate AudioChannelAgent. Approval Request Comment [Feature/Bug causing the regression]: Bug 1195051 [User impact if declined]: The sound indicator won't show anymore [Is this code covered by automated tests?]: Yes [Has the fix been verified in Nightly?]: No [Needs manual test from QE? If yes, steps to reproduce]: No [List of other uplifts needed for the feature/fix]: also uplift patch 2 [Is the change risky?]: No [Why is the change risky/not risky?]: This patch avoids AudioContext disconnecting with the sound-icon related systems, it only affects icons showing [String changes made/needed]: No
Flags: needinfo?(alwu)
Attachment #9008870 -
Flags: approval-mozilla-beta?
Comment 13•2 years ago
|
||
Comment on attachment 9008870 [details] Bug 1489375 - part1 : do not recreate AudioChannelAgent. Minimal patch fixing a well defined P2 bug, uplift approved for 63 beta 9, thanks.
Attachment #9008870 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
![]() |
||
Comment 14•2 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-beta/rev/9bad6b73be9d https://hg.mozilla.org/releases/mozilla-beta/rev/d63bc2e27b83
You need to log in
before you can comment on or make changes to this bug.
Description
•