Bug 1489375 - part1 : do not recreate AudioChannelAgent. r=padenot a=pascalc

When calling resume() on a running AudioContext, there is no need to discard current AudioChannelAgent and then create a new one.

Differential Revision: https://phabricator.services.mozilla.com/D5799